First stab at getting lin-bus integrated